tests/sumo/errors/routes/first_edge_disallowed/testsuite.sumo
plain

# with --ignore-route-errors
ignore
